--- a/views/LibraryViews/search.html.twig
+++ b/views/LibraryViews/search.html.twig
@@ -25,17 +25,35 @@
 
         <div class='resultSearch'>Aucun produit trouvé !</div>
 
-        <div class='popin'></div>
-        <div class='contentPopin'>
-            <div class='left'>
-                <div class='principalImg'>
-                    <div class='vAlign'></div>
-                    <img class='imgProductDetail'>
-                </div>
-                <div class='imagesProduct'></div>
+
+    </div>
+
+    <div class='popin'></div>
+    <div class='contentPopin'>
+        <img src='/images/close.png' title='Fermer' class='closePopin'/>
+        <div class='left'>
+            <div class='principalImg'>
+                <div class='vAlign'></div>
+                <img class='imgProductDetail'>
             </div>
-            <div class='right'>
-                Informations
+            <div class='imagesProduct'></div>
+        </div>
+        <div class='right'>
+            <h1></h1>
+
+            <div class='detailPage'>
+                <div><div>EAN</div>:<span class='codeEAN'></span></div>
+                <div class='divPublic'><div>Public</div>:<span class='public'></span></div>
+                <div class='divActors'><div>Acteur(s)</div>:<span class='actors'></span></div>
+                <div class='divBrand'><div>Marque</div>:<span class='brand'></span></div>
+                <div class='divRelease'><div>Sortie</div>:<span class='release'></span></div>
+                <div class='divFeature'><div>Description</div>:<span class='feature'></span></div>
+                <div><div>Groupe</div>:<span class='group'></span></div>
+                <div><div>Prix</div>:<span class='amount'></span></div>
+
+                <div class='actionPopin'>
+                    <a href='#'>Plus d'informations</a>
+                    <input type='submit' value='Ajouter'/>
             </div>
         </div>
     </div>
