--- a/public/stylesheets/sass/_productSearch.scss
+++ b/public/stylesheets/sass/_productSearch.scss
@@ -22,6 +22,8 @@
                 display: block;
                 margin: 0px auto;
                 cursor: pointer;
+                width: 50%;
+                max-height: 190px;
             }
             span {
                 img {
