Plus les prix, Stocker les produits en base NoSQL

--- a/views/LibraryViews/search.html.twig
+++ b/views/LibraryViews/search.html.twig
@@ -49,11 +49,11 @@
                 <div class='divRelease'><div>Sortie</div>:<span class='release'></span></div>
                 <div class='divFeature'><div>Description</div>:<span class='feature'></span></div>
                 <div><div>Groupe</div>:<span class='group'></span></div>
-                <div><div>Prix</div>:<span class='amount'></span></div>
 
                 <div class='actionPopin'>
                     <a href='#'>Plus d'informations</a>
                     <input type='submit' value='Ajouter'/>
+                </div>
             </div>
         </div>
     </div>
