--- a/public/stylesheets/sass/_template.scss
+++ b/public/stylesheets/sass/_template.scss
@@ -4,7 +4,8 @@ body {
     background-color: #092D3D;
 
     .popin,
-    .contentPopin {
+    .contentPopin,
+    .popinResult {
         display: none;
     }
 
