--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,7 +33,7 @@ select { display: block; height: 34px; padding: 6px 12px; font-size: 14px; line-
 
 @font-face { font-family: 'librarize'; src: url("../images/librarize.eot?p5irvb"); src: url("../images/librarize.eot?p5irvb#iefix") format("embedded-opentype"), url("../images/librarize.ttf?p5irvb") format("truetype"), url("../images/librarize.woff?p5irvb") format("woff"), url("../images/librarize.svg?p5irvb#icomoon") format("svg"); font-weight: normal; font-style: normal; }
 body { background-color: #092D3D; }
-body .popin, body .contentPopin { display: none; }
+body .popin, body .contentPopin, body .popinResult { display: none; }
 body header { font-family: 'librarize'; margin-left: auto; margin-right: auto; text-align: center; font-size: 60px; }
 body header .nameOrganization { display: inline-block; color: #FFFFFF; }
 body header .nameOrganization:before { content: ""; }
@@ -124,3 +124,5 @@ body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-ch
 .contentPopin .right .detailPage div span ul { width: 81%; display: inline-block; list-style: none; margin-top: 2px; margin: 0; padding: 0; }
 .contentPopin .right .detailPage .actionPopin { text-align: center; }
 .contentPopin .right .detailPage .actionPopin a { margin-right: 25%; }
+
+.popinResult { position: fixed; top: 40%; left: 35%; z-index: 3; font-size: 230%; text-align: center; border-radius: 10px; padding: 5px 30px; }
