--- a/public/stylesheets/sass/_template.scss
+++ b/public/stylesheets/sass/_template.scss
@@ -105,7 +105,8 @@ body {
     .generalContentSearchUsers,
     .generalContentSeeInvitation,
     .generalContentMyFriends,
-    .generalContentProductSearch {
+    .generalContentProductSearch,
+    .generalContentMyProducts {
         background-color: $color-font-content-gray;
         width: 80%;
         margin: 0px auto;
