--- a/views/LibraryViews/search.html.twig
+++ b/views/LibraryViews/search.html.twig
@@ -2,7 +2,7 @@
 {% set user = result.userInfo %}
 {
 
-{%  block title %} Informations {% endblock %}
+{%  block title %} Rechercher un produit {% endblock %}
 
 {%  block content %}
     <div class='generalContentProductSearch'>
