--- a/views/template.html.twig
+++ b/views/template.html.twig
@@ -14,6 +14,7 @@
         <script src="../javascripts/userInformations.js"></script>
         <script src="../javascripts/friends.js"></script>
         <script src="../javascripts/library.js"></script>
+        <script src="../javascripts/myLibrary.js"></script>
     </head>
 
     <body>
@@ -40,7 +41,7 @@
                     Bibliothèque
                     <ul>
                         <li class='menuNav' data='/product/search'><div>Recherche</div></li>
-                        <li class='menuNav' data='/product/'><div>Mes produits</div></li>
+                        <li class='menuNav' data='/product/myProducts'><div>Mes produits</div></li>
                     </ul>
                 </li>
                 <li class='titleMenu'>
