--- a/views/LibraryViews/myProducts.html.twig
+++ b/views/LibraryViews/myProducts.html.twig
@@ -23,9 +23,10 @@
             </select>
         </div>
 
-        <div class='resultSearch'>Aucun produit trouvé !</div>
-
+        <div class='resultSearch'></div>
     </div>
+
+    <div class='popinResult'></div>
 
 
 {% endblock %}
