--- a/views/LibraryViews/search.html.twig
+++ b/views/LibraryViews/search.html.twig
@@ -58,9 +58,7 @@
         </div>
     </div>
 
-    <div class='popinResult'>
-        test
-    </div>
+    <div class='popinResult'></div>
 
 
 {% endblock %}
