--- a/public/stylesheets/sass/_myProduct.scss
+++ b/public/stylesheets/sass/_myProduct.scss
@@ -18,21 +18,20 @@
             display: inline-block;
             padding-bottom: 50px;
 
-            img {
+            img.principal{
                 display: block;
                 margin: 0px auto;
                 cursor: pointer;
                 width: 50%;
                 max-height: 190px;
             }
-            span {
-                img {
-                    cursor: pointer;
-                    display: inline-block;
-                    vertical-align: middle;
-                    padding-bottom: 7px;
-                    padding-left: 10px;
-                }
+            img.del{
+                cursor: pointer;
+                display: inline-block;
+                vertical-align: middle;
+                padding-bottom: 2px;
+                padding-left: 10px;
+                width: 17px;
             }
 
             div {
@@ -62,4 +61,15 @@
             }
         }
     }
+}
+
+.popinResult {
+    position: fixed;
+    top: 40%;
+    left: 35%;
+    z-index: 3;
+    font-size: 230%;
+    text-align: center;
+    border-radius: 10px;
+    padding: 5px 30px;
 }
