Detail mes produits + supprimé via les détails

--- a/views/LibraryViews/search.html.twig
+++ b/views/LibraryViews/search.html.twig
@@ -24,8 +24,6 @@
         </div>
 
         <div class='resultSearch'>Aucun produit trouvé !</div>
-
-
     </div>
 
     <div class='popin'></div>
@@ -52,7 +50,7 @@
 
                 <div class='actionPopin'>
                     <a href='#'>Plus d'informations</a>
-                    <input type='submit' value='Ajouter'/>
+                    <input class='addProdut' type='submit' value='Ajouter'/>
                 </div>
             </div>
         </div>
