search in my produt by title, ean and group

--- a/public/stylesheets/main/style.css
+++ b/public/stylesheets/main/style.css
@@ -716,8 +716,8 @@ select {
 
 .generalContentMyProducts {
   text-align: center; }
-  .generalContentMyProducts .formSearchProduct input,
-  .generalContentMyProducts .formSearchProduct select {
+  .generalContentMyProducts .formSearchMyProduct input,
+  .generalContentMyProducts .formSearchMyProduct select {
     display: inline-block; }
   .generalContentMyProducts .resultSearch {
     margin-top: 50px;
