--- a/views/LibraryViews/myProducts.html.twig
+++ b/views/LibraryViews/myProducts.html.twig
@@ -8,9 +8,9 @@
     <div class='generalContentMyProducts'>
         <h1>Mes produits</h1>
 
-        <div class='formSearchProduct'>
-            <input type='text' placeholder='Nom ou code EAN' class='inputSearch'/>
-            <select class='searchIndex'>
+        <div class='formSearchMyProduct'>
+            <input type='text' placeholder='Nom ou code EAN' class='inputSearchMyProduct'/>
+            <select class='searchIndexMyProduct'>
                 <option value='All'>Tout</option>
                 <option value='Jewelry'>Bijoux</option>
                 <option value='DVD'>DVD</option>
