--- a/public/stylesheets/sass/_myProduct.scss
+++ b/public/stylesheets/sass/_myProduct.scss
@@ -1,7 +1,7 @@
 .generalContentMyProducts {
     text-align: center;
 
-    .formSearchProduct {
+    .formSearchMyProduct {
         input,
         select {
             display: inline-block;
