--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -127,7 +127,7 @@ body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-ch
 .popinResult { position: fixed; top: 40%; left: 35%; z-index: 3; font-size: 230%; text-align: center; border-radius: 10px; padding: 5px 30px; }
 
 .generalContentMyProducts { text-align: center; }
-.generalContentMyProducts .formSearchProduct input, .generalContentMyProducts .formSearchProduct select { display: inline-block; }
+.generalContentMyProducts .formSearchMyProduct input, .generalContentMyProducts .formSearchMyProduct select { display: inline-block; }
 .generalContentMyProducts .resultSearch { margin-top: 50px; font-size: 24px; font-weight: bold; }
 .generalContentMyProducts .resultSearch .oneProduct { width: 20%; display: inline-block; padding-bottom: 50px; }
 .generalContentMyProducts .resultSearch .oneProduct img.principal { display: block; margin: 0px auto; cursor: pointer; width: 50%; max-height: 190px; }
