--- a/public/stylesheets/sass/_friends.scss
+++ b/public/stylesheets/sass/_friends.scss
@@ -89,6 +89,13 @@
                         cursor: pointer;
                         display: inline-block;
                         vertical-align: middle;
+                    }
+
+                    img.libraryImg {
+                          width: 25px;
+                    }
+
+                    img.imgDelFriend {
                         width: 18px;
                     }
                 }
