--- a/views/FriendsViews/myFriends.html.twig
+++ b/views/FriendsViews/myFriends.html.twig
@@ -23,6 +23,7 @@
 
                             <span>
                                 {{ oneInvitation.pseudo }}
+                                <img src='../images/library.png' title="Voir la bibliothèque de {{ oneInvitation.pseudo }}"  class='libraryImg' />
                                 <img src='../images/del.png' title="Supprimer {{ oneInvitation.pseudo }} de votre liste d'amis" class='imgDelFriend' />
                             </span>
                         </div>
