--- a/public/stylesheets/sass/_friends.scss
+++ b/public/stylesheets/sass/_friends.scss
@@ -103,3 +103,12 @@
         }
     }
 }
+
+.contentPopin {
+    .contentFriendLibrary {
+        h1 {
+            text-align: center;
+            margin: 0;
+        }
+    }
+}
