--- a/views/FriendsViews/myFriends.html.twig
+++ b/views/FriendsViews/myFriends.html.twig
@@ -21,7 +21,7 @@
                                 <img src='../images/userAvatar/noAvatarF.png' />
                             {% endif %}
 
-                            <span>
+                            <span data="{{ oneInvitation.pseudo }}">
                                 {{ oneInvitation.pseudo }}
                                 <img src='../images/library.png' title="Voir la bibliothèque de {{ oneInvitation.pseudo }}"  class='libraryImg' />
                                 <img src='../images/del.png' title="Supprimer {{ oneInvitation.pseudo }} de votre liste d'amis" class='imgDelFriend' />
@@ -32,6 +32,16 @@
                     <div class='noBodyFriend' style="margin-top: -20px">Vous avez aucun ami dans votre liste</div>
                 {% endif %}
             </div>
+        </div>
+    </div>
+
+    <div class='popin'></div>
+    <div class='contentPopin'>
+        <div class='contentFriendLibrary'>
+            <img src='/images/close.png' title='Fermer' class='closePopin'/>
+            <h1>Libraire de <span class="popinPseudo"></span></h1>
+
+            <div class='resultSearchFriendProduct'>Aucun produit trouvé !</div>
         </div>
     </div>
 
