add etatImg + setEtat directly

--- a/public/stylesheets/main/style.css
+++ b/public/stylesheets/main/style.css
@@ -742,7 +742,8 @@ select {
         cursor: pointer;
         width: 50%;
         max-height: 190px; }
-      .generalContentMyProducts .resultSearch .oneProduct img.del {
+      .generalContentMyProducts .resultSearch .oneProduct img.del,
+      .generalContentMyProducts .resultSearch .oneProduct img.imgE {
         cursor: pointer;
         display: inline-block;
         vertical-align: middle;
