--- a/public/stylesheets/sass/_myProduct.scss
+++ b/public/stylesheets/sass/_myProduct.scss
@@ -25,7 +25,8 @@
                 width: 50%;
                 max-height: 190px;
             }
-            img.del{
+            img.del,
+            img.imgEtat {
                 cursor: pointer;
                 display: inline-block;
                 vertical-align: middle;
