--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,7 +33,7 @@ select { display: block; height: 34px; padding: 6px 12px; font-size: 14px; line-
 
 @font-face { font-family: 'librarize'; src: url("../images/librarize.eot?p5irvb"); src: url("../images/librarize.eot?p5irvb#iefix") format("embedded-opentype"), url("../images/librarize.ttf?p5irvb") format("truetype"), url("../images/librarize.woff?p5irvb") format("woff"), url("../images/librarize.svg?p5irvb#icomoon") format("svg"); font-weight: normal; font-style: normal; }
 body { background-color: #092D3D; }
-body .popin, body .contentPopin, body .popinResult { display: none; }
+body .popin, body .contentPopin, body .popinResult, body .contentPopinFriendLibrary { display: none; }
 body header { font-family: 'librarize'; margin-left: auto; margin-right: auto; text-align: center; font-size: 60px; }
 body header .nameOrganization { display: inline-block; color: #FFFFFF; }
 body header .nameOrganization:before { content: ""; }
@@ -100,7 +100,11 @@ body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-ch
 .generalContentMyFriends .content .invitationType .oneUser span img.libraryImg, .generalContentSeeInvitation .content .invitationType .oneUser span img.libraryImg { width: 25px; }
 .generalContentMyFriends .content .invitationType .oneUser span img.imgDelFriend, .generalContentSeeInvitation .content .invitationType .oneUser span img.imgDelFriend { width: 18px; }
 
-.contentPopin .contentFriendLibrary h1 { text-align: center; margin: 0; }
+.contentPopinFriendLibrary { width: 60%; background-color: #CCCCCC; position: fixed; top: 20%; left: 20%; z-index: 2; padding: 20px; }
+.contentPopinFriendLibrary img.closePopin { position: absolute; right: 0; top: 0; cursor: pointer; }
+.contentPopinFriendLibrary h1 { text-align: center; margin: 0; }
+.contentPopinFriendLibrary .resultSearchFriendProduct .oneProduct { width: 18%; display: inline-block; margin: 25px 10px; }
+.contentPopinFriendLibrary .resultSearchFriendProduct .oneProduct img { width: 100%; }
 
 .generalContentProductSearch { text-align: center; }
 .generalContentProductSearch .formSearchProduct input, .generalContentProductSearch .formSearchProduct select { display: inline-block; }
