--- a/views/FriendsViews/myFriends.html.twig
+++ b/views/FriendsViews/myFriends.html.twig
@@ -36,13 +36,13 @@
     </div>
 
     <div class='popin'></div>
-    <div class='contentPopin'>
-        <div class='contentFriendLibrary'>
+    <div class='contentPopinFriendLibrary'>
+        {#<div class='contentFriendLibrary'>#}
             <img src='/images/close.png' title='Fermer' class='closePopin'/>
             <h1>Libraire de <span class="popinPseudo"></span></h1>
 
             <div class='resultSearchFriendProduct'>Aucun produit trouvé !</div>
-        </div>
+        {#</div>#}
     </div>
 
 {% endblock %}
