--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,7 +52,7 @@ body .menuDiv ul a { color: black; text-decoration: none; }
 body .generalContent, body .generalContentSearchUsers, body .generalContentSeeInvitation, body .generalContentMyFriends, body .generalContentProductSearch, body .generalContentMyProducts { background-color: #CCCCCC; width: 80%; margin: 0px auto; border-radius: 5px; padding-bottom: 25px; }
 body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-child, body .generalContentSeeInvitation h1:first-child, body .generalContentMyFriends h1:first-child, body .generalContentProductSearch h1:first-child, body .generalContentMyProducts h1:first-child { text-align: center; }
 
-.msgInfo { position: fixed; top: 50%; left: 50%; width: 600px; margin-left: -300px; text-align: center; font-size: 20px; padding: 3px; border-radius: 5px; opacity: 0; }
+.msgInfo { position: fixed; top: 50%; left: 50%; width: 600px; margin-left: -300px; text-align: center; font-size: 20px; padding: 3px; border-radius: 5px; opacity: 0; z-index: 5; }
 
 .msgInfoOk { color: #3C763D; background-color: #DFF0F8; border-color: #D6D9C6; }
 
@@ -100,11 +100,13 @@ body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-ch
 .generalContentMyFriends .content .invitationType .oneUser span img.libraryImg, .generalContentSeeInvitation .content .invitationType .oneUser span img.libraryImg { width: 25px; }
 .generalContentMyFriends .content .invitationType .oneUser span img.imgDelFriend, .generalContentSeeInvitation .content .invitationType .oneUser span img.imgDelFriend { width: 18px; }
 
-.contentPopinFriendLibrary { width: 60%; background-color: #CCCCCC; position: fixed; top: 20%; left: 20%; z-index: 2; padding: 20px; }
+.contentPopinFriendLibrary { width: 60%; background-color: #CCCCCC; position: fixed; top: 20%; left: 20%; z-index: 2; padding: 20px; text-align: center; }
 .contentPopinFriendLibrary img.closePopin { position: absolute; right: 0; top: 0; cursor: pointer; }
 .contentPopinFriendLibrary h1 { text-align: center; margin: 0; }
 .contentPopinFriendLibrary .resultSearchFriendProduct .oneProduct { width: 18%; display: inline-block; margin: 25px 10px; }
-.contentPopinFriendLibrary .resultSearchFriendProduct .oneProduct img { width: 100%; }
+.contentPopinFriendLibrary .resultSearchFriendProduct .oneProduct img.principal { width: 100%; }
+.contentPopinFriendLibrary .resultSearchFriendProduct .oneProduct img.imgEtat { display: inline-block; vertical-align: middle; padding-bottom: 2px; padding-left: 10px; width: 17px; }
+.contentPopinFriendLibrary .resultSearchFriendProduct .oneProduct img.imgAdd { display: inline-block; vertical-align: middle; width: 23px; margin-top: -3px; cursor: pointer; }
 
 .generalContentProductSearch { text-align: center; }
 .generalContentProductSearch .formSearchProduct input, .generalContentProductSearch .formSearchProduct select { display: inline-block; }
