ajout de l'onglet échange au menu

--- a/views/template.html.twig
+++ b/views/template.html.twig
@@ -45,6 +45,14 @@
                     </ul>
                 </li>
                 <li class='titleMenu'>
+                    &Eacute;change
+                    <ul>
+                        <li class='menuNav' data=''><div>Demande d'échange</div></li>
+                        <li class='menuNav' data=''><div>En cours</div></li>
+                        <li class='menuNav' data=''><div>Historique</div></li>
+                    </ul>
+                </li>
+                <li class='titleMenu'>
                     <div class='pseudoUserMenu'>{{ result.pseudoUser }}</div>
                     <ul>
                         <li class='menuNav' data='/user/informations'><div>Mes informations</div></li>
