--- a/views/template.html.twig
+++ b/views/template.html.twig
@@ -15,6 +15,7 @@
         <script src="../javascripts/friends.js"></script>
         <script src="../javascripts/library.js"></script>
         <script src="../javascripts/myLibrary.js"></script>
+        <script src="../javascripts/swap.js"></script>
     </head>
 
     <body>
@@ -47,9 +48,9 @@
                 <li class='titleMenu'>
                     &Eacute;change
                     <ul>
-                        <li class='menuNav' data=''><div>Demande d'échange</div></li>
-                        <li class='menuNav' data=''><div>En cours</div></li>
-                        <li class='menuNav' data=''><div>Historique</div></li>
+                        <li class='menuNav' data='/swap/myRequest'><div>Demande d'échange</div></li>
+                        <li class='menuNav' data='/swap/inProgress'><div>En cours</div></li>
+                        <li class='menuNav' data='/swap/history'><div>Historique</div></li>
                     </ul>
                 </li>
                 <li class='titleMenu'>
