--- a/public/stylesheets/sass/_template.scss
+++ b/public/stylesheets/sass/_template.scss
@@ -105,7 +105,10 @@ body {
     .generalContentSeeInvitation,
     .generalContentMyFriends,
     .generalContentProductSearch,
-    .generalContentMyProducts {
+    .generalContentMyProducts,
+    .generalContentMyRequest,
+    .generalContentInProgress,
+    .generalContentHistory {
         background-color: $color-font-content-gray;
         width: 80%;
         margin: 0px auto;
