--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,8 +49,8 @@ body .menuDiv ul .titleMenu ul { display: none; text-align: left; }
 body .menuDiv ul .titleMenu ul li { display: block; width: 100%; background-color: #FFFFFF; height: 40px; border-radius: 5px; margin-top: 5px; line-height: 35px; box-shadow: inset -6px -6px 5px 0px #656565; }
 body .menuDiv ul .titleMenu ul li div { width: auto; padding-left: 15px; }
 body .menuDiv ul a { color: black; text-decoration: none; }
-body .generalContent, body .generalContentSearchUsers, body .generalContentSeeInvitation, body .generalContentMyFriends, body .generalContentProductSearch, body .generalContentMyProducts { background-color: #CCCCCC; width: 80%; margin: 0px auto; border-radius: 5px; padding-bottom: 25px; }
-body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-child, body .generalContentSeeInvitation h1:first-child, body .generalContentMyFriends h1:first-child, body .generalContentProductSearch h1:first-child, body .generalContentMyProducts h1:first-child { text-align: center; }
+body .generalContent, body .generalContentSearchUsers, body .generalContentSeeInvitation, body .generalContentMyFriends, body .generalContentProductSearch, body .generalContentMyProducts, body .generalContentMyRequest, body .generalContentInProgress, body .generalContentHistory { background-color: #CCCCCC; width: 80%; margin: 0px auto; border-radius: 5px; padding-bottom: 25px; }
+body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-child, body .generalContentSeeInvitation h1:first-child, body .generalContentMyFriends h1:first-child, body .generalContentProductSearch h1:first-child, body .generalContentMyProducts h1:first-child, body .generalContentMyRequest h1:first-child, body .generalContentInProgress h1:first-child, body .generalContentHistory h1:first-child { text-align: center; }
 
 .msgInfo { position: fixed; top: 50%; left: 50%; width: 600px; margin-left: -300px; text-align: center; font-size: 20px; padding: 3px; border-radius: 5px; opacity: 0; z-index: 5; }
 
@@ -146,3 +146,9 @@ body .generalContent h1:first-child, body .generalContentSearchUsers h1:first-ch
 .generalContentMyProducts .resultSearch .oneProduct span[title]:hover:before { cursor: default; content: attr(title); margin-left: 0px; margin-top: 0px; position: absolute; z-index: 20; white-space: nowrap; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; -moz-box-shadow: 0px 0px 4px #222; -webkit-box-shadow: 0px 0px 4px #222; box-shadow: 0px 0px 4px #222; background-image: -moz-linear-gradient(top, #eeeeee, #cccccc); background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #eeeeee), color-stop(1, #cccccc)); background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc); background-image: -moz-linear-gradient(top, #eeeeee, #cccccc); background-image: -ms-linear-gradient(top, #eeeeee, #cccccc); background-image: -o-linear-gradient(top, #eeeeee, #cccccc); }
 
 .popinResult { position: fixed; top: 40%; left: 35%; z-index: 3; font-size: 230%; text-align: center; border-radius: 10px; padding: 5px 30px; }
+
+.generalContentMyRequest { text-align: center; }
+.generalContentMyRequest .oneProduct { width: 20%; display: inline-block; padding-bottom: 50px; }
+.generalContentMyRequest .oneProduct img.principal { display: block; margin: 0px auto; width: 50%; max-height: 190px; }
+.generalContentMyRequest .oneProduct img.accepte { display: inline-block; vertical-align: middle; width: 16px; margin-top: -3px; cursor: pointer; margin-left: 10px; }
+.generalContentMyRequest .oneProduct img.del { display: inline-block; vertical-align: middle; width: 16px; margin-top: -3px; cursor: pointer; margin-left: 5px; }
