Voir mes échange en cours Valider un retours qui remet le produit disponible

--- a/public/stylesheets/main/style.css
+++ b/public/stylesheets/main/style.css
@@ -849,4 +849,23 @@ select {
       cursor: pointer;
       margin-left: 5px; }
 
+.generalContentInProgress {
+  text-align: center; }
+  .generalContentInProgress .oneProduct {
+    width: 20%;
+    display: inline-block;
+    padding-bottom: 50px; }
+    .generalContentInProgress .oneProduct img.principal {
+      display: block;
+      margin: 0px auto;
+      width: 50%;
+      max-height: 190px; }
+    .generalContentInProgress .oneProduct img.return {
+      display: inline-block;
+      vertical-align: middle;
+      width: 16px;
+      margin-top: -3px;
+      cursor: pointer;
+      margin-left: 10px; }
+
 /*# sourceMappingURL=style.css.map */
