--- a/public/stylesheets/sass/_swap.scss
+++ b/public/stylesheets/sass/_swap.scss
@@ -32,3 +32,29 @@
         }
     }
 }
+
+.generalContentInProgress {
+    text-align: center;
+    .oneProduct {
+        width: 20%;
+        display: inline-block;
+        padding-bottom: 50px;
+
+        img.principal{
+            display: block;
+            margin: 0px auto;
+            width: 50%;
+            max-height: 190px;
+        }
+
+        img.return {
+            display: inline-block;
+            vertical-align: middle;
+            width: 16px;
+            margin-top: -3px;
+            cursor: pointer;
+            margin-left: 10px;
+        }
+
+    }
+}
