--- a/views/SwapViews/inProgress.html.twig
+++ b/views/SwapViews/inProgress.html.twig
@@ -7,6 +7,7 @@
     <div class='generalContentInProgress'>
         <h1>En cours</h1>
 
+        <div class="resultSearch">Aucun échange en cours</div>
     </div>
 
 {% endblock %}
